--- a/Proyecto/entregable-fe3/package.json
+++ b/Proyecto/entregable-fe3/package.json
@@ -2,6 +2,7 @@
   "name": "entregable-fe3",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://laraconverso.github.io/Entrega-FE3-LaraConverso/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
@@ -38,7 +39,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^4.0.0",
-    "homepage": "https://laraconverso.github.io/Entrega-FE3-LaraConverso/"
+    "gh-pages": "^4.0.0"
   }
 }
